--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClicknPay API</title>
+    <title>Go Figure API</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     </style>
 
 
-    <h1>All Endpoints Available for this API</h1>
+    <h1>Welcome to the Go Figure API, Below are all the Endpoints:</h1>
     <h2>Users:</h2>
     <ul>
         <li><span>GET</span> <span>/users</span></li>
